# epitech-zia

./: CMakeLists.txt  README.md  build.sh  conanfile.txt  config.json  mycert.pem
UT/: main.cpp
include/: ConfigLoader.hpp  Core.hpp  Server.hpp  filesystem.hpp  network.h
module/DELETE/: DELETE.cmake  DELETE.cpp  DELETE.hpp
module/GET/: GET.cmake  GET.cpp  GET.hpp
module/OPTIONS/: OPTIONS.cmake  OPTIONS.cpp  OPTIONS.hpp
module/OpenSSL/: OpenSSL.cmake  OpenSSL.cpp  OpenSSL.hpp
module/PHP/: PHP.cmake  PHP.cpp  PHP.hpp
module/POST/: POST.cmake  POST.cpp  POST.hpp
module/PUT/: PUT.cmake  PUT.cpp  PUT.hpp
module/TRACE/: TRACE.cmake  TRACE.cpp  TRACE.hpp
module/fillByteArray/: FillByteArray.cpp  FillByteArray.hpp  fillByteArray.cmake
module/parseHeader/: parseHeader.cmake  parseHeader.cpp  parseHeader.hpp
src/: ConfigLoader.cpp  Core.cpp  Server.cpp  main.cpp  misc.cpp
